--- a/components/accountCard/accountCard.wxss
+++ b/components/accountCard/accountCard.wxss
@@ -3,7 +3,17 @@
   width: 100%;
   border-top: 7rpx solid #f5f5f5;
 }
-
+.suplierMemo {
+  position: absolute;
+  height: 42rpx;
+  width: 42rpx;
+  border-radius: 50% 50% 80% 50%;
+  padding: 10rpx;
+  right: 15rpx;
+  background: linear-gradient(17deg,#285dee, #45abdf);
+  bottom: 11rpx;
+  z-index: 999;
+}
 .collect-statu-card .shop > image {
   height: 100rpx;
   width: 100rpx;
@@ -83,6 +93,7 @@
 }
 
 .order-info {
+  position: relative;
   display: flex;
   justify-content: flex-start;
   flex-wrap: wrap;
@@ -105,5 +116,5 @@
 
 .all-selected {
   padding: 0rpx 0 55rpx 25rpx;
-
 }
+
