--- a/pages/goodSearch/goodSearch.wxml
+++ b/pages/goodSearch/goodSearch.wxml
@@ -3,7 +3,7 @@
 <view class="search-bar-container">
 	<view class="nav-seach-bar-box">
 		<image src='../../images/search.png' bindtap="searchOrder" />
-		<input type="text" class="nav-seach-bar" placeholder='请输入订单号或商品名称' placeholder-style='font-size: 26rpx;' value="{{searchValue}}" bindinput="inputBindValue" confirm-type="搜索" bindconfirm="searchOrder" />
+		<input type="text" class="nav-seach-bar" placeholder='请输入商品编号或商品名称' placeholder-style='font-size: 26rpx;' value="{{searchValue}}" bindinput="inputBindValue" confirm-type="搜索" bindconfirm="searchOrder" />
 	</view>
 	<button bindtap="searchOrder" style="margin: 0 40rpx;" type="primary" size="mini">搜索</button>
 </view>
