--- a/pages/orderDetail/orderDetail.wxml
+++ b/pages/orderDetail/orderDetail.wxml
@@ -29,12 +29,6 @@
   </view>
 </view>
 
-<!-- <view class="order-remarks">
-  <view class="item">
-    <view class="label">店主留言：</view>
-    <view class="content">尽快发货，谢谢！</view>
-  </view>
-</view> -->
 
 <TextItems wx:if="{{detailData.memo}}" texrItemData="{{[{label: '店主留言：', content: detailData.memo}]}}" />
 <TextItems texrItemData="{{[{label: '商品信息'}]}}" />
@@ -69,25 +63,6 @@
         <view class="num"> {{item.realQty + item.unitNo}}</view>
         <view class="allPrice"> {{'￥'+item.subAmt}}</view>
       </view>
-      <!-- <view class="image-box">
-        <image src="{{item.imgImg}}"/>
-        <view>
-          <TextItems 
-            boxStyle="border: 0rpx;"
-            itemStyle="font-size: 24rpx;letter-spacing: 0rpx;padding:8rpx 0;margin-right:50rpx;" 
-            labelStyle="color: #5C5C5C;"  
-            contentStyle="white-space: nowrap;"
-            texrItemData="{{[{label: '包装规格：', content: item.itemSize}, {label: '要货数量：', content: item.realQty + item.unitNo}]}}" 
-          />
-          <TextItems 
-            boxStyle="border: 0rpx;"
-            itemStyle="font-size: 24rpx;letter-spacing: 0rpx;padding:8rpx 0;margin-right:50rpx;" 
-            labelStyle="color: #5C5C5C;"  
-            contentStyle="color: #FF4E3E;"
-            texrItemData="{{[{label: '单价：', content: '￥'+item.validPrice}]}}" 
-          />
-        </view>
-      </view> -->
     </view>
   </block>
   
@@ -142,84 +117,39 @@
 </view>
 </view>
 
-<!-- 商品信息区域(换成了上面商品的表格) -->
-
-<!-- <view class="goods-card-box" wx:for="{{detailData.details}}" wx:key="index">
-  <block>
-    <view class="image-box">
-      <image src="{{item.imgImg}}"/>
-    </view>
-    <view class="good-detail">
-      <view class="item">
-        <TextItems 
-          boxStyle="border: 0rpx;"
-          itemStyle="font-size: 24rpx;letter-spacing: 0rpx;padding:8rpx 0;" 
-          labelStyle="color: #5C5C5C;"  
-          texrItemData="{{[{label: '条码：', content: item.itemSubno}]}}" 
-        />
-        <TextItems 
-          boxStyle="border: 0rpx;"
-          itemStyle="font-size: 24rpx;letter-spacing: 0rpx;padding:8rpx 0;margin-right:50rpx;" 
-          labelStyle="color: #5C5C5C;"  
-          texrItemData="{{[{label: '品名：', content: item.itemName}]}}" 
-        />
-        <TextItems 
-          boxStyle="border: 0rpx;"
-          itemStyle="font-size: 24rpx;letter-spacing: 0rpx;padding:8rpx 0;margin-right:50rpx;" 
-          labelStyle="color: #5C5C5C;"  
-          contentStyle="white-space: nowrap;"
-          texrItemData="{{[{label: '包装规格：', content: item.itemSize}, {label: '要货数量：', content: item.realQty + item.unitNo}]}}" 
-        />
-        <TextItems 
-          boxStyle="border: 0rpx;"
-          itemStyle="font-size: 24rpx;letter-spacing: 0rpx;padding:8rpx 0;margin-right:50rpx;" 
-          labelStyle="color: #5C5C5C;"  
-          contentStyle="color: #FF4E3E;"
-          texrItemData="{{[{label: '单价：', content: '￥'+item.validPrice}]}}" 
-        />
-        <TextItems 
-          boxStyle="border: 0rpx;"
-          itemStyle="font-size: 24rpx;letter-spacing: 0rpx;padding:8rpx 0;margin-right:50rpx;" 
-          labelStyle="color: #5C5C5C;"  
-          contentStyle="color: #FF4E3E;"
-          texrItemData="{{[{label: '总价：', content: '￥'+item.subAmt}]}}" 
-        />
-      </view>
-    </view>
-  </block>
-  
-</view> -->
-
 
 <TextItems 
   texrItemData="{{[{label: '订单总额：', content: '￥'+detailData.sheetAmt}, {label: '商品总数：', content: detailData.sheetQty}]}}"
   contentStyle="color: #FF4E3E;"
 />
-<!-- <TextItems wx:if="{{orderStatu == 2}}" texrItemData="{{[{label: '下单时间：', content: '05-08 15:16'}]}}" />
-<TextItems wx:if="{{orderStatu == 3}}" texrItemData="{{[{label: '下单时间：', content: '05-08 15:16'},{label: '装车时间：', content: '06-07 12:20'}]}}" /> -->
-
-<!-- <TextItems wx:if="{{orderStatu == 3}}" texrItemData="{{[{label: '司机姓名：', content: '张三丰 137 5889 4456'}]}}" /> -->
 <TextItems texrItemData="{{[{label: '订单号：', content: detailData.sheetNo}]}}" >
   <view class="tag" bindtap="copySheetNoClick" data-sheetNo="{{detailData.sheetNo}}">复制</view>
 </TextItems>
 
-<!-- <image wx:if="{{orderStatu == 0}}" bindtap="print" src="../../images/orderDetailPrint.png" class="printBtn" />
-<image wx:if="{{orderStatu == 1}}" bindtap="print" src="../../images/makeCarbtn.png" class="printBtn" /> -->
 <button wx:if="{{supplyFlag == 1 || supplyFlag == 2}}" bindtap="print" style="height: 80rpx;width: 600rpx;border-radius: 50rpx;font-weight: 400;font-size: 30rpx;line-height: 50rpx;letter-spacing: 4rpx;margin: 100rpx auto 0;background: linear-gradient(to bottom right, #3BB0EC, #245EF7);" type='primary'>打印/拣货</button>
 
 <button wx:if="{{supplyFlag == 1 || supplyFlag == 2}}" bindtap="warehouseOut" style="height: 80rpx;width: 600rpx;border-radius: 50rpx;font-weight: 400;font-size: 30rpx;line-height: 50rpx;letter-spacing: 4rpx;margin: 40rpx auto;background: linear-gradient(-120deg, #3BB0EC, #245EF7);" type='primary'>出库</button>
 
 <view bindtap="goAddPrintClick" wx:if="{{supplyFlag == 1 || supplyFlag == 2 || true}}" class="addPrint">添加打印设备</view>
 
-<button wx:if="{{supplyFlag == 3}}" bindtap="makeCar" style="height: 80rpx;width: 600rpx;border-radius: 50rpx;font-weight: 400;font-size: 30rpx;line-height: 50rpx;letter-spacing: 4rpx;margin: 160rpx auto;background: linear-gradient(120deg, #FFB910, #FF8200);" type='primary'>装车</button>
+<button wx:if="{{supplyFlag == 3}}" bindtap="makeCar" style="height: 80rpx;width: 600rpx;border-radius: 50rpx;font-weight: 400;font-size: 30rpx;line-height: 50rpx;letter-spacing: 4rpx;margin: 160rpx auto 70rpx;background: linear-gradient(120deg, #FFB910, #FF8200);" type='primary'>装车</button>
 
+<button 
+  style="height: 80rpx;width: 600rpx;border-radius: 50rpx;font-weight: 400;font-size: 30rpx;line-height: 50rpx;letter-spacing: 4rpx;margin: 40rpx auto;background: linear-gradient(to bottom right, rgb(251, 179, 129), #FF5E4E)" 
+  wx:if="{{supplyFlag != 1 && supplyFlag != 2}}" 
+  bindtap="print"
+  data-type="1"
+  type='primary'
+>
+    补打
+</button>
 
 
 <!-- 选择司机 Dialog -->
 <view class="print-order-box" wx:if="{{ supplyFlag == 3 && isShowEnterCarDialog}}">
   <view class="print-order" >
     <view class="title">请选择配送司机</view>
-    <view bindtap="selectDriver">
+    <view bindtap="selectDriver" class="d-container">
       <view class="car-tag {{item.selected == 1 ? 'selecedD' : ''}}" wx:for="{{driverArr}}" wx:key="index" data-index="{{index}}">{{item.name}}</view>
     </view>
     
