--- a/components/accountCard/accountCard.wxml
+++ b/components/accountCard/accountCard.wxml
@@ -25,6 +25,7 @@
       src="../../images/memo.png" 
       wx:if="{{isShowMemoIcon}}"
       catch:tap="showMemoDialogClick"
+      data-i="{{index}}"
     />
     <view class="item" wx:if="{{data.sheetAmt}}">
       <text class="label">金额：</text>
@@ -47,8 +48,12 @@
       <text class="content">{{data.sheetNo}}</text>
     </view>
     <view class="item" wx:if="{{data.memo}}">
-      <text class="label">备注：</text>
+      <text class="label">客户备注：</text>
       <text class="content">{{data.memo}}</text>
+    </view>
+    <view class="item" wx:if="{{data.bossMemo}}">
+      <text class="label">老版备注：</text>
+      <text class="content">{{data.bossMemo}}</text>
     </view>
     <!-- <view class="item">
       <text class="label">备注：</text>
