--- a/app.wxss
+++ b/app.wxss
@@ -14,3 +14,22 @@ page {
   padding: 200rpx 0;
   box-sizing: border-box;
 } 
+
+
+.default-area{
+  position: absolute;
+  top: 360rpx;
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  z-index: -1;
+}
+.default-area-image {
+  height: 105rpx;
+  width: 140rpx;
+}
+.default-area-text {
+  width: 166rpx;
+  color: #666;
+}
