--- a/pages/accountStatement/accountStatement.wxss
+++ b/pages/accountStatement/accountStatement.wxss
@@ -59,6 +59,7 @@ page{
 .collect-statu-card {
   width: 100%;
   border-top: 4rpx solid #f5f5f5;
+  background-color: #fff;
 }
 
 .collect-statu-card image{
@@ -131,6 +132,7 @@ color: #808080;
   border-top: 6rpx solid #f5f5f5;
   padding: 18rpx 0;
   position: relative;
+  background-color: #fff;
 }
 
 .received-info-box .item {
