--- a/pages/orderDetail/orderDetail.wxml
+++ b/pages/orderDetail/orderDetail.wxml
@@ -126,7 +126,7 @@
   <view class="tag" bindtap="copySheetNoClick" data-sheetNo="{{detailData.sheetNo}}">复制</view>
 </TextItems>
 
-<button wx:if="{{supplyFlag == 1 || supplyFlag == 2}}" bindtap="print" style="height: 80rpx;width: 600rpx;border-radius: 50rpx;font-weight: 400;font-size: 30rpx;line-height: 50rpx;letter-spacing: 4rpx;margin: 100rpx auto 0;background: linear-gradient(to bottom right, #3BB0EC, #245EF7);" type='primary'>打印/拣货</button>
+<button wx:if="{{supplyFlag == 1 || supplyFlag == 2}}" bindtap="print" style="height: 80rpx;width: 600rpx;border-radius: 50rpx;font-weight: 400;font-size: 30rpx;line-height: 50rpx;letter-spacing: 4rpx;margin: 100rpx auto 0;background: linear-gradient(to bottom right, #3BB0EC, #245EF7);" type='primary'>发货</button>
 
 <button wx:if="{{supplyFlag == 1 || supplyFlag == 2}}" bindtap="warehouseOut" style="height: 80rpx;width: 600rpx;border-radius: 50rpx;font-weight: 400;font-size: 30rpx;line-height: 50rpx;letter-spacing: 4rpx;margin: 40rpx auto;background: linear-gradient(-120deg, #3BB0EC, #245EF7);" type='primary'>出库</button>
 
