--- a/pages/recharge/recharge.wxml
+++ b/pages/recharge/recharge.wxml
@@ -1,19 +1,36 @@
+
+<Navbar 
+  title='消费充值'
+  background='#ff6658' 
+  leftIconText="返回"
+  isShowLeftIcon="{{true}}"
+/>
 <view class='head head-col'>
 
-  <view class='reconciliation' bindtap='goPage'>充值</view>
-  <view class='title'>账户余额(元)</view>
-  <view class='money'>{{czAmt||0}}</view>
+  <!-- <view class='reconciliation' bindtap='goPage'>充值</view> -->
+  <view>
+    <view class='title'>账户余额(元)</view>
+    <view class='money'>{{data.master.czAmt}}</view>
+  </view>
+  <view>
+    <view class='title'>授信额度(元)</view>
+    <view class='money'>{{data.master.creditAmt}}</view>
+  </view>
+  <view>
+    <view class='title'>消费金额(元)</view>
+    <view class='money'>{{data.master.consumeAmt}}</view>
+  </view>
 </view>
 
 <view class='list'>
-  <view class='li' wx:for="{{data}}" bindtap="toDetail" wx:key="index" data-index="{{index}}">
+  <view class='li' wx:for="{{data.detail}}" bindtap="toDetail" wx:key="index" data-index="{{index}}">
     <view class='item' >
-      <text class='type'>{{item.memo || '取消大苏打'}}</text>
-      <text class='right'>{{item.createDate || '2020-02-02 15:2:2'}}</text>
+      <text class='type'></text>
+      <text class='right'></text>
     </view>
     <view class='item' >
-      <text class='sheetNo'>{{item.subOrderNo || 'ZC56432181156564'}}</text>
-      <text class='right money'>{{item.busiFrozenAmt || '-13156'}}</text>
+      <text class='sheetNo'>{{item.operDate || '2020-02-02 15:2:2'}}</text>
+      <text class='right money'>消费金额: {{item.busiAmt || '-13156'}}</text>
     </view>
   </view>
 </view>
