--- a/pages/recharge/recharge.wxss
+++ b/pages/recharge/recharge.wxss
@@ -1,12 +1,12 @@
-.head{background: #ff6658;color: #f2f2f2;text-align: center;padding-top: 30rpx;position: fixed;top: 0;left: 0;width: 100%;}
-.head>.title{font-size: 28rpx;}
-.head>.money{color: #fff;font-weight: bold;font-size: 70rpx;margin-top: 10rpx;padding-bottom: 40rpx}
-.head>.backMoney{font-size:26rpx;}
-.head>.credit{padding: 10rpx 0 30rpx 0;color: #fafafa;}
+.head{background: #ff6658;color: #f2f2f2;text-align: center;padding: 50rpx 0; position: relative;top: 0;left: 0;width: 100%;display: flex;justify-content: space-around;}
+.head .title{font-size: 28rpx;}
+.head .money{color: #fff;font-weight: bold;font-size: 44rpx;margin-top: 10rpx;}
+.head .backMoney{font-size:26rpx;}
+.head .credit{padding: 10rpx 0 30rpx 0;color: #fafafa;}
 .reconciliation{position: absolute;top: 20rpx;right: 30rpx;color: #fff;text-align: center;width:120rpx;line-height: 60rpx;}
-.list{padding-top: 220rpx;background-color: #fff;}
+.list{background-color: #fff;}
 .list>.li{padding: 20rpx 20rpx 15rpx 20rpx;font-size: 22rpx;color: #777;border-bottom: 2rpx solid #e4e4e4;}
-.list>.li .item{overflow: hidden;line-height: 40rpx;}
+.list>.li .item{overflow: hidden;line-height: 50rpx; font-size: 28rpx;}
 .list>.li .item>.right{float: right;}
 .list>.li .type{color: #000;font-size: 32rpx;}
 .list>.li .money{font-size: 34rpx;color: #000;}
