--- a/pages/login/login.wxml
+++ b/pages/login/login.wxml
@@ -57,6 +57,7 @@
   <button bindtap="submit" style="height: 80rpx;width: 600rpx;border-radius: 50rpx;font-weight: 400;font-size: 30rpx;line-height: 50rpx;letter-spacing: 4rpx;margin-top: 160rpx;background: linear-gradient(to bottom right, rgb(241, 149, 139), #FF4E3E);" type='primary'>登录</button>
 
   
+  <SelectPrint list="{{['12asdasaASDASDF3', '8ASD8ADADADA9', '554AADDASASDSD4']}}" />
   <!-- <image class="zksr" src='../../images/zk.png'/> -->
   <view class="zksr">
     <view class="line" />
