--- a/pages/driverTransStatu/driverTransStatu.wxml
+++ b/pages/driverTransStatu/driverTransStatu.wxml
@@ -99,7 +99,9 @@
 <view class="print-order-box" wx:if="{{isShowCollectDialog}}" catchtap="closeDialogClick">
   <view class="print-order" catchtap="toPayClick">
     <view class="title">请选择收款方式</view>
-    <view class="btn wx" data-payType="0">在线支付</view>
+    <!-- <view class="btn wx" data-payType="0">在线支付</view> -->
+    <view class="btn wx" data-payType="0">微信支付</view>
+    <view class="btn zfb" data-payType="1">支付宝支付</view>
     <view class="btn cash" data-payType="2">现金收款</view>
   </view>
 </view>
