--- a/pages/paymentRes/paymentRes.wxml
+++ b/pages/paymentRes/paymentRes.wxml
@@ -28,14 +28,14 @@
     texrItemData="{{[{label: '应收金额：', content: resData.payAmt}]}}" 
   /> -->
 </view>
-<view class="container-box">
+<!-- <view class="container-box">
     <view class="canvas-box">
         <canvas style="width: 686rpx;height: 686rpx;background:#f1f1f1;" canvas-id="mycanvas" />
     </view>
     <view class="img-box">
         <image bindtap="previewImg" mode="scaleToFill" src="{{imagePath}}"></image>
     </view>
-</view>
+</view> -->
 
 <view class="container">
   <button bindtap="closeOrder" style="padding: 38rpx;height: 80rpx;width: 600rpx;border-radius: 50rpx;font-weight: 400;font-size: 30rpx;line-height: 2rpx;letter-spacing: 4rpx;margin-top: 15rpx;background: linear-gradient(to bottom right, #FFB910, #FF8200);" type='primary'>返回</button>
