--- a/components/selectPrint/selectPrint.wxml
+++ b/components/selectPrint/selectPrint.wxml
@@ -1,5 +1,6 @@
 <view class="mark" catchtap="hide" wx:if="{{isShow}}">
   <view class="print-dialog">
+    <view class="title">请选择打印设备</view>
     <view class="list">
       <view 
         class="item {{item.select ? 'act' : ''}}" 
@@ -13,6 +14,6 @@
         <view>{{item.printNo}}</view>
       </view>
     </view>
-    <view class='btn' catchtap="confirm">确定</view>
+    <view class='btn' catchtap="confirm">打印</view>
   </view>
 </view>
