--- a/pages/orderDetail/orderDetail.wxml
+++ b/pages/orderDetail/orderDetail.wxml
@@ -137,7 +137,7 @@
 <button 
   style="height: 80rpx;width: 600rpx;border-radius: 50rpx;font-weight: 400;font-size: 30rpx;line-height: 50rpx;letter-spacing: 4rpx;margin: 40rpx auto;background: linear-gradient(to bottom right, rgb(251, 179, 129), #FF5E4E)" 
   wx:if="{{supplyFlag != 1 && supplyFlag != 2}}" 
-  bindtap="print"
+  bindtap="showSelectPrint"
   data-type="1"
   type='primary'
 >
@@ -162,3 +162,6 @@
 </view>
 
 <!-- <view class="addPrint">添加打印机</view> -->
+
+<!-- 选择打印机 -->
+<SelectPrint list="{{printList || ['s']}}" isShow="{{isShowSelectDialog || true}}" bind:printEvent="selectPrintEvent" />
