--- a/pages/login/login.wxml
+++ b/pages/login/login.wxml
@@ -45,13 +45,13 @@
       data-name='password'
       bindinput="binding"
       class="input"
-      type='password' 
+      type='{{isShowPassword ? "number" : "password"}}' 
       placeholder='请输入密码'
       placeholder-style='margin-left: 18rpx;'
       maxlength='12'
       value="{{password}}"
     >
-      <image mode="aspectFit" class="switch-password" src='../../images/login_pw.png'/>
+      <image mode="aspectFit" class="switch-password" src='../../images/{{isShowPassword ? "login_pw_show.png" : "login_pw.png"}}' catchtap="switchPassword"/>
     </input>
   </form>
 
