1. 第一版已发布  2. 商品管理页面优化，增加触底加载动画，以及加载完毕的判断

--- a/pages/orderDetail/orderDetail.wxss
+++ b/pages/orderDetail/orderDetail.wxss
@@ -269,7 +269,7 @@ border-radius: 6rpx;
   border-radius: 0rpx 25rpx 0rpx 25rpx;
 }
 .addPrint {
-  position: absolute;
+  position: fixed;
   bottom: 40rpx;
   right: 60rpx;
   width: 105rpx;
