--- a/pages/goodList/goodList.wxml
+++ b/pages/goodList/goodList.wxml
@@ -38,9 +38,11 @@
 		<!-- <view class="asd">asd</view> -->
 		<GoodCard wx:if="{{selectedNav == 0 || item.status != selectedNav - 1}}" isAllSelected="{{isAllSelected}}" wx:for="{{goodsData}}" wx:key="index" goodsData="{{item}}" index="{{index}}" />
 
-
-		<view class="null" style="margin: 40rpx auto 90rpx;" wx:if="{{goodsData.length%10 != 0}}">
+		<view class="null" style="margin: 40rpx auto 90rpx;" wx:if="{{isShowBottomNull}}">
 		———	已经到底了哟 ———
+		</view>
+		<view class="loading" wx:if="{{isShowBottomLoading}}">
+		  加载中....
 		</view>
 		
 		<!-- <view class="dsa">dsa</view> -->
@@ -181,9 +183,5 @@
 				<button data-type="1" style="background:#fff;height: 90rpx;line-height:50rpx;text-align: center;font-size: 30rpx;color: #08B018;font-weight:400;">确认</button>
 			</view>
 		</view>
-
-
 	</view>
-
-
 </view>
