--- a/pages/goodList/goodList.wxss
+++ b/pages/goodList/goodList.wxss
@@ -14,6 +14,14 @@ page {
   margin-top: 80rpx;
   color: #666;
 }
+.loading {
+  width: 100%;
+  background-color: #333333;
+  color: #f5f5f5;
+  font-size: 30rpx;
+  padding: 20rpx 0;
+  text-align: center;
+}
 .nav-seach-bar-box {
   position: absolute;
   top: 5rpx;
