消费充值页面请求参数 BUG 修复,详情页增加消费日期显示

--- a/pages/recharge/recharge.wxml
+++ b/pages/recharge/recharge.wxml
@@ -29,8 +29,8 @@
       <text class='right'></text>
     </view>
     <view class='item' >
-      <text class='sheetNo'>{{item.operDate || '2020-02-02 15:2:2'}}</text>
-      <text class='right money'>消费金额: {{item.busiAmt || '-13156'}}</text>
+      <text class='sheetNo'>{{item.operDate}}</text>
+      <text class='right money'>消费金额: {{item.busiAmt}}</text>
     </view>
   </view>
 </view>
