1. 个人资料页添加注册商户入口

--- a/pages/editRoleData/editRoleData.wxml
+++ b/pages/editRoleData/editRoleData.wxml
@@ -1,5 +1,6 @@
 <Navbar title='个人资料' background='#fff' leftIconStyle='black' titleStyle='color: #000;' leftIconText='返回' />
 
+<view class="to-register" bindtap="toRegister">前往商户注册>></view>
 <view class="form-box">
   <view class="item">
     <label>姓 名：</label>
