--- a/pages/bossRegister/readyRegister/readyRegister.wxml
+++ b/pages/bossRegister/readyRegister/readyRegister.wxml
@@ -9,7 +9,7 @@
 <view class="container">
 <!-- 告示 -->
   <view class="notice">
-    <view class="content c-1">注册前请准备好以下</view>
+    <view class="content c-1">注册商户前请准备好以下</view>
     <view class="content c-2">几种图片资料</view>
     <view class="content c-3">(建议准备齐全后进行申请操作)</view>
   </view>
