1. 打印修改为只需要添加编号，将所有打印机添加在自己账号下  2. 打印时需要选择打印机，目前只能添加一个打印机，添加多个，最后添加的才会生效

--- a/pages/orderStatu/orderStatu.wxml
+++ b/pages/orderStatu/orderStatu.wxml
@@ -149,4 +149,4 @@
 </view>
 
 <!-- 选择打印机 -->
-<SelectPrint list="{{printList || ['sasd']}}" isShow="{{isShowSelectDialog || true}}" bind:printEvent="selectPrintEvent" />
+<SelectPrint isShow="{{isShowSelectDialog}}" bind:printEvent="selectPrintEvent" />
