--- a/pages/orderDetail/orderDetail.wxml
+++ b/pages/orderDetail/orderDetail.wxml
@@ -164,4 +164,4 @@
 <!-- <view class="addPrint">添加打印机</view> -->
 
 <!-- 选择打印机 -->
-<SelectPrint list="{{printList || ['s']}}" isShow="{{isShowSelectDialog || true}}" bind:printEvent="selectPrintEvent" />
+<SelectPrint isShow="{{isShowSelectDialog}}" bind:printEvent="selectPrintEvent" />
