1. 添加充值页面  2. 优化表格 隔行换色

--- a/components/SaleDataTable/SaleDataTable.wxss
+++ b/components/SaleDataTable/SaleDataTable.wxss
@@ -21,6 +21,10 @@
   padding-bottom: 0;
 }
 
+.table-box:nth-child(even) {
+  background-color: #eee;
+}
+
 .table-box .item{
   color: #808080;
   height: 64rpx;
