--- a/pages/recharge/recharge.wxss
+++ b/pages/recharge/recharge.wxss
@@ -1,4 +1,4 @@
-.head{background: #ff6658;color: #f2f2f2;text-align: center;padding: 50rpx 0; position: relative;top: 0;left: 0;width: 100%;display: flex;justify-content: space-around;}
+.head{background: #ff6658;color: #f2f2f2;text-align: center;padding: 100rpx 0 40rpx; position: relative;top: 0;left: 0;width: 100%;display: flex;justify-content: space-around;}
 .head .title{font-size: 28rpx;}
 .head .money{color: #fff;font-weight: bold;font-size: 44rpx;margin-top: 10rpx;}
 .head .backMoney{font-size:26rpx;}
@@ -6,7 +6,19 @@
 .reconciliation{position: absolute;top: 20rpx;right: 30rpx;color: #fff;text-align: center;width:120rpx;line-height: 60rpx;}
 .list{background-color: #fff;}
 .list>.li{padding: 20rpx 20rpx 15rpx 20rpx;font-size: 22rpx;color: #777;border-bottom: 2rpx solid #e4e4e4;}
+
+.list>.li:nth-child(odd){background-color: #eeeeee;}
 .list>.li .item{overflow: hidden;line-height: 50rpx; font-size: 28rpx;}
 .list>.li .item>.right{float: right;}
 .list>.li .type{color: #000;font-size: 32rpx;}
 .list>.li .money{font-size: 34rpx;color: #000;}
+.recharge {
+  position: absolute;
+top: 25rpx;
+background: #fff;
+color: #fa5f51;
+font-weight: bold;
+padding: 8rpx 25rpx;
+border-radius: 35rpx;
+font-size: 30rpx;
+}
