--- a/pages/bossRegister/bossRegister.wxss
+++ b/pages/bossRegister/bossRegister.wxss
@@ -3,7 +3,6 @@
   min-height: 100vh;
   width: 100%;
   background-color: #f5f5f5;
-  position: absolute;
 }
 
 .item {
@@ -58,4 +57,20 @@
   width: 500rpx;
   background: linear-gradient(to bottom right, rgb(255,183,0), rgb(255,130,0));
   border-radius: 40rpx;
+}
+
+
+.form{color: #333333;height: 115rpx;display: flex;padding: 0 30rpx;border-bottom: 2rpx solid #f2f2f2;position: relative;align-items: center;font-size: 31rpx;}
+.form>.name{flex-grow: 1;line-height: 110rpx;flex: .6;color: #444444;}
+.form>input{flex: 1;font-size: 32rpx;}
+
+.span{
+  padding: 10rpx 20rpx;
+  font-size: 34rpx;
+  margin: 24rpx auto 5rpx;
+  width: 400rpx;
+  text-align: center;
+  border-radius: 16rpx;
+  color: #333333;
+  font-weight: bold;
 }
