--- a/pages/login/login.wxss
+++ b/pages/login/login.wxss
@@ -83,9 +83,10 @@ page{
   position: absolute;
   height: 32rpx;
   width: 32rpx;
-  top: 25rpx;
-  right: 35rpx;
+  top: 0rpx;
+  right: 6rpx;
   z-index: 99;
+  padding: 28rpx;
 }
 
 .login-btn {
