--- a/pages/rechargePay/rechargePay.wxss
+++ b/pages/rechargePay/rechargePay.wxss
@@ -3,7 +3,7 @@ page{
   background-color: #eee;
 }
 input {
-  margin: 120rpx auto 50rpx;
+  margin: 60rpx auto 50rpx;
   width: 450rpx;
   padding: 18rpx 35rpx;
   font-size: 33rpx;
@@ -11,4 +11,32 @@ input {
   background-color: #fff;
   border-radius: 12rpx;
   
+}
+
+.select-amt {
+  width: 90%;
+  padding: 20rpx 5%;
+  background-color: #fff;
+  height: 190rpx;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-flow: row wrap;
+}
+.tag{
+  color: rgb(123,190,213);
+  border-radius: 6rpx;
+  border: 1rpx solid rgb(123,190,213);
+  text-align: center;
+  padding: 14rpx;
+  flex: 0 0 25%; 
+}
+
+.act{
+  color: #fff;
+  border-radius: 6rpx;
+  background-color: rgb(123,190,213);
+  text-align: center;
+  padding: 14rpx;
+  flex: 0 0 25%;
 }
